Iniciando banco de dados

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="menu">
-        <button onclick="getConteudo('file:///C:/Users/Daniel%20Lima/Documents/GitHub/barbearia_nobraco/front_partes/servicos.hml')">Seviços</button>
+        <button onclick="getConteudo('http://localhost/barbearia_nobraco/front_partes/servicos.php')">Seviços</button>
         <button>Barbeiros</button>
         <button>Disponibilidade</button>
     </div>
